fix: contrast ratio on colors

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -1,7 +1,7 @@
 :root {
   --black: #151515;
-  --darkBlue: #22abc7;
-  --red: #ed145a;
+  --darkBlue: #133DC8;
+  --red: #e21352;
   --white: #fafafa;
 }
 
